--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,5 @@
+/* Variables */
+
 :root {
   --primary-color: #1a1a1a;
   --accent-color: #063757;
@@ -154,7 +156,7 @@ body {
 
 .card,
 .card img {
-  width: 22rem;
+  width: 18rem;
 }
 
 .card {
