--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,12 @@
+/* Import */
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 /* Variables */
 
 :root {
-  --primary-color: #1a1a1a;
-  --accent-color: #063757;
+  --primary-color: #121212;
+  --secondary-color: #063757;
+  --accent-color: #076cb0;
   --text-color: #eff4df;
 }
 
@@ -25,6 +29,7 @@ button {
 }
 
 body {
+  font-family: "Poppins", sans-serif;
   background-color: var(--primary-color);
   background-image: url("http://localhost/skillfull/public/img/login_background.jpg");
   background-size: 100%;
@@ -39,7 +44,7 @@ body {
   width: 499px;
   border-radius: 20px;
   padding: 30px 50px;
-  background-color: var(--accent-color);
+  background-color: var(--secondary-color);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
@@ -79,16 +84,21 @@ body {
 
 /* Navbar */
 
+.navbar {
+  background: linear-gradient(90deg, rgb(18, 18, 18) 0%, rgb(6, 54, 86) 100%);
+  border-bottom: 2px solid #076cb0;
+}
+
 .input-group {
   margin-top: 0px;
-  border: 1px solid var(--text-color);
+  border: 2px solid var(--text-color);
+  color: var(--text-color) !important;
   border-radius: 10px;
 }
 
 .input-group input {
+  background-color: rgba(6, 54, 86, 0.3) !important;
   border-radius: 10px 0 0 10px;
-  color: var(--text-color) !important;
-  background-color: var(--primary-color) !important;
   border: none;
 }
 
@@ -97,13 +107,29 @@ body {
   border: none;
 }
 
+.btn-search {
+  border: none;
+  background-color: rgba(6, 54, 86, 0.3) !important;
+  border-radius: 0 10px 10px 0;
+}
+
 .btn-search:hover {
-  border: 1px solid var(--text-color);
-  background-color: #4b4b4b;
+  background-color: #4b4b4b !important;
 }
 
 .btn-nav-icon {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
+}
+
+/* Navbar Dropdown */
+.dropdown-menu {
+  border-width: 3px;
+  border-color: var(--accent-color);
+  background-color: var(--secondary-color);
+}
+
+.dropdown-divider {
+  background-color: var(--accent-color);
 }
 
 /* Home  */
@@ -123,6 +149,7 @@ body {
   height: 375px;
   max-height: 100vh;
   overflow: hidden;
+  box-shadow: 0 0 20px 5px rgba(6, 55, 87, 40%);
 }
 
 .carousel-image-overlay {
@@ -153,13 +180,14 @@ body {
 }
 
 /* Card */
+.card {
+  border-radius: 20px;
+  box-shadow: 0 0 20px 5px rgba(6, 55, 87, 40%);
+}
+
 .card,
 .card img {
   width: 19rem;
-}
-
-.card {
-  border-radius: 20px;
 }
 
 .card img {
