--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,6 +63,12 @@ button {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
+.login-wrapper input::placeholder,
+.register-wrapper input::placeholder {
+  color: var(--text-color) !important;
+  filter: brightness(25%);
+}
+
 .container-login,
 .container-register {
   height: 100%;
@@ -111,6 +117,10 @@ button {
 .input-group input:focus {
   box-shadow: none;
   border: none;
+}
+
+.input-group input::placeholder {
+  color: var(--text-color) !important;
 }
 
 .btn-search {
@@ -204,6 +214,8 @@ button {
   border-radius: 20px 20px 0 0;
 }
 
+/* Search */
+
 /* Media Queries */
 
 /* For Laptop Only */
@@ -220,6 +232,7 @@ button {
 
 /* For Tablet Only */
 @media (max-width: 768px) {
+  
 }
 
 /* For Phone Large Only */
